Updated title for OH

--- a/01_intro_to_git.ipynb
+++ b/01_intro_to_git.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Git and your Terminal \n",
+    "# Introduction to Git and your Terminal - Office Hour Change \n",
     "\n",
     "**OBJECTIVES**\n",
     "\n",
